ICpdAS/dcon_dll/driver/bcb3/i87000.h

Exp87K WORD CALLBACK DigitalOut_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
//---------------------- input -------------------------------------
// dwBuf[0];             // RS-232 port number: 1/2/3/4..../255
// dwBuf[1];             // module address: 0x00 to 0xFF
// dwBuf[2];             // module ID: 0x87054/55/56/57/60/63/64/65/66/68/41
// dwBuf[3];             // checksum: 0=disable, 1=enable
// dwBuf[4];             // TimeOut constant: normal=100
// dwBuf[5];             // 16-bit digital data to output
// dwBuf[6];             // flag: 0=no save, 1=save send/receive string
//---------------------- output ------------------------------------
                         // void



Exp87K WORD CALLBACK DigitalBitOut_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
//---------------------- input -------------------------------------
// dwBuf[0];             // RS-232 port number: 1/2/3/4..../255
// dwBuf[1];             // module address: 0x00 to 0xFF
// dwBuf[2];             // module ID: 0x87054/55/56/57/60/63/64/65/66/68/41
// dwBuf[3];             // checksum: 0=disable, 1=enable
// dwBuf[4];             // TimeOut constant: normal=100
// dwBuf[5];             // don't care
// dwBuf[6];             // flag: 0=no save, 1=save send/receive string
// dwBuf[7];             // which channel to output
// dwBuf[8];             // data to output (0 or 1)
//---------------------- output ------------------------------------
                         // void



Exp87K WORD CALLBACK DigitalIn_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
//---------------------- input -------------------------------------
// dwBuf[0];             // RS-232 port number: 1/2/3/4..../255
// dwBuf[1];             // module address: 0x00 to 0xFF
// dwBuf[2];             // module ID:  0x87054/55/56/57/60/63/64/65/66/68/40
// dwBuf[3];             // checksum: 0=disable, 1=enable
// dwBuf[4];             // TimeOut constant: normal=100
// dwBuf[5];             // 16-bit digital data to output
// dwBuf[6];             // flag: 0=no save, 1=save send/receive string
//---------------------- output ------------------------------------
                         // void



Exp87K WORD CALLBACK DigitalInCounterRead_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
//---------------------- input -------------------------------------
// dwBuf[0];             // RS-232 port number: 1/2/3/4..../255
// dwBuf[1];             // module address: 0x00 to 0xFF
// dwBuf[2];             // module ID: 0x87051/52/53/54/55/63/40
// dwBuf[3];             // checksum: 0=disable, 1=enable
// dwBuf[4];             // TimeOut constant: normal=100
// dwBuf[5];             // Channel Number
// dwBuf[6];             // flag: 0=no save, 1=save send/receive string
//---------------------- output ------------------------------------
// dwBuf[7];			 //Counter Value of Channel N's Digital Input


Exp87K WORD CALLBACK ClearDigitalInCounter_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
//---------------------- input -------------------------------------
// dwBuf[0];             // RS-232 port number: 1/2/3/4..../255
// dwBuf[1];             // module address: 0x00 to 0xFF
// dwBuf[2];             // module ID: 0x87051/52/53/54/55/63/40
// dwBuf[3];             // checksum: 0=disable, 1=enable
// dwBuf[4];             // TimeOut constant: normal=100
// dwBuf[5];             // Channel Number
// dwBuf[6];             // flag: 0=no save, 1=save send/receive string


Exp87K WORD CALLBACK DigitalInLatch_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
//---------------------- input -------------------------------------
// dwBuf[0];             // RS-232 port number: 1/2/3/4..../255
// dwBuf[1];             // module address: 0x00 to 0xFF
// dwBuf[2];             // module ID: 0x87051/52/53/54/55/63/40
// dwBuf[3];             // checksum: 0=disable, 1=enable
// dwBuf[4];             // TimeOut constant: normal=100
// dwBuf[5];             // 0: Latch Low,   1: Latch High
// dwBuf[6];             // flag: 0=no save, 1=save send/receive string
//---------------------- output ------------------------------------
// dwBuf[7];             // latch value


Exp87K WORD CALLBACK ClearDigitalInLatch_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
//---------------------- input -------------------------------------
// dwBuf[0];             // RS-232 port number: 1/2/3/4..../255
// dwBuf[1];             // module address: 0x00 to 0xFF
// dwBuf[2];             // module ID: 0x87051/52/53/54/55/63/40
// dwBuf[3];             // checksum: 0=disable, 1=enable
// dwBuf[4];             // TimeOut constant: normal=100
// dwBuf[5];             // Don't care
// dwBuf[6];             // flag: 0=no save, 1=save send/receive string


Exp87K WORD CALLBACK DigitalOutReadBack_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
 //---------------------- input ---------------------------
 //dwBuf[0];		 // RS-232 port number: 1/2/3/4/..../255
 //dwBuf[1];         // module address: 0x00 to 0xFF
 //dwBuf[2];         // module ID: 0x87054/55/56/57/60/63/64/65/66/68/41
 //dwBuf[3];		 // checksum: 0=disable, 1=enable
 //dwBuf[4];		 // TimeOut constant: normal=100
 //dwBuf[6];		 // flag: 0=no save, 1=save send/receive string
 //---------------------- output -----------------------
 // void

Exp87K WORD CALLBACK AnalogIn_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
//---------------------- input -------------------------------------
// dwBuf[0];            // RS-232 port number: 1/2/3/4..../255
// dwBuf[1];            // module address: 0x00 to 0xFF
// dwBuf[2];            // module ID: 0x87013/17/18/33
// dwBuf[3];            // checksum: 0=disable, 1=enable
// dwBuf[4];            // TimeOut constant: normal=100
// dwBuf[5];            // channel number for multi-channel
// dwBuf[6];            // flag: 0=no save, 1=save send/receive string
// dwBuf[7];			// Slot Number
//---------------------- output ------------------------------------
                        // fBuf[0]=analog input value

/************************************************************/
/*  AnalogInAll_87K											*/
/*															*/
/*  Main Unit: I-87K series									*/
/*															*/
/*  Module: I-87013,,I-87017,I-87018						*/
/************************************************************/
Exp87K WORD CALLBACK AnalogInAll_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
/*
====== Input parameter ====================================
 dwBuf[0]; RS-232 port number: 1 ~ 255
 dwBuf[1]; Module address: 0x00 ~ 0xFF
 dwBuf[2]; Module ID:	0x87013 for I-87013,
						0x87017 for I-87017,
						0x87018 for I-87018
 dwBuf[3]; Checksum: 0=disable, 1=enable
 dwBuf[4]; TimeOut: Normal=100 (ms)
 dwBuf[6]; Debug:	0=disable
					1=enable:	copy command string (sent to module)
								to szSend and response string (received from module)
								to szReceive.
 dwBuf[7];				// Data Foramt, 0:Engineer 1:FSR  2:Hex
====== Output parameter ===================================
 if dwBuf[2] is 0x87013
 fBuf[0]=analog input value of channel_0
 fBuf[1]=analog input value of channel_1
 fBuf[2]=analog input value of channel_2
 fBuf[3]=analog input value of channel_3

 if dwBuf[2] is 0x87017/18
 fBuf[0]=analog input value of channel_0
 fBuf[1]=analog input value of channel_1
 ........................................
 fBuf[7]=analog input value of channel_7
*/


/************************************************/
/*------  Set Analog Output for 87024  ---------*/
Exp87K WORD CALLBACK AnalogOut_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
 //---------------------- input -------------------------------------
 //dwBuf[0];    // RS-232 port number: 1/2/3/4/..../255
 //dwBuf[1];    // module address: 0x00 to 0xFF
 //dwBuf[2];    // module ID: 0x87022/0x87026 (0x87024 has no Fsr type)
 //dwBuf[3];    // checksum: 0=disable, 1=enable
 //dwBuf[4];    // TimeOut constant: normal=100
 //dwBuf[5];    // Channel No.(0 to 1)
 //dwBuf[6];    // flag: 0=no save, 1=save send/receive string
  
 //fBuf[0];     // analog output value 		
 //---------------------- output ------------------------------------

/*******************************************************/
Exp87K WORD CALLBACK AnalogOutReadBack_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
//---------------------- input -------------------------------------
// dwBuf[0];  // RS-232 port number: 1/2/3/4/..../255
// dwBuf[1];  // module address: 0x00 to 0xFF
// dwBuf[2];  // module ID: 87022/87026
// dwBuf[3];  // checksum: 0=disable, 1=enable
// dwBuf[4];  // TimeOut constant: normal=100
// dwBuf[5];  // for 7021/7022/7024
              //     0: command read back ($AA6)
              //     1: analog output of current path read back ($AA8)
// dwBuf[6];  // flag: 0=no save, 1=save send/receive string
// dwBuf[7];  // Channel No.(0 to 3)
//---------------------- output ------------------------------------
              // fBuf[0]=analog output value read back


/*******************************************************/
/*------  Set Configuration Status for 87024 ---------*/
Exp87K WORD CALLBACK ReadConfigurationStatus_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
//---------------------- input -------------------------------------
// dwBuf[0];    // RS-232 port number: 1/2/3/4/..../255
// dwBuf[1];    // module address: 0x00 to 0xFF
// dwBuf[2];    // module ID: 0x87024
// dwBuf[3];    // checksum: 0=disable, 1=enable
// dwBuf[4];    // TimeOut constant: normal=100
// dwBuf[5];    // channel
// dwBuf[6];    // flag: 0=no save, 1=save send/receive string
// dwBuf[8]:    // Output Range: 0x30, 0x31, 0x32              
// dwBuf[9]:    //  Slew rate :  0 to 11                 
//---------------------- output ------------------------------------
// void

/*******************************************************/


/******************************************************/
/*'02'6'24 added
/*------  Reading Start-Up Value for 87024 ---------*/
Exp87K WORD CALLBACK ReadStartUpValue_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
//---------------------- input -------------------------------------
// dwBuf[0];    // RS-232 port number: 1/2/3/4/..../255
// dwBuf[1];    // module address: 0x00 to 0xFF
// dwBuf[2];    // module ID: 0x87024
// dwBuf[3];    // checksum: 0=disable, 1=enable
// dwBuf[4];    // TimeOut constant: normal=100
// dwBuf[5];    // channel
// dwBuf[6];    // flag: 0=no save, 1=save send/receive string
// dwBuf[7];    // slot
//---------------------- output ------------------------------------
// fBuf[0]      // the Start-Up Value        
   
/******************************************************/
/*'02'6'24 added
/---------  Setting Start-Up Value for 87024 ---------*/
Exp87K WORD CALLBACK SetStartUpValue_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
   //---------------------- input -------------------------------------
// dwBuf[0];    // RS-232 port number: 1/2/3/4/..../255
// dwBuf[1];    // module address: 0x00 to 0xFF
// dwBuf[2];    // module ID: 0x87024
// dwBuf[3];	// checksum: 0=disable, 1=enable
// dwBuf[4];	// TimeOut constant: normal=100
// dwBuf[5];	// channel
// dwBuf[6];    // flag: 0=no save, 1=save send/receive string
// dwBuf[7];    // slot


/************************************************************************/
/*'02'6'24 added
/* -------------------------------------------------------------------- */
Exp87K WORD CALLBACK AnalogInFsr_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
  //---------------------- input -------------------------------------
// dwBuf[0];     // RS-232 port number: 1/2/3/4/..../255
// dwBuf[1];     // module address: 0x00 to 0xFF
// dwBuf[2];     // module ID: 0x87017/0x87018
// dwBuf[3];     // checksum: 0=disable, 1=enable
// dwBuf[4];     // TimeOut constant: normal=100
// dwBuf[5];     // channel number for multi-channel
// dwBuf[6];     // flag: 0=no save, 1=save send/receive string
// dwBuf[7];     // Slot Number
//---------------------- output ------------------------------------
// fBuf[0];      //analog input value
                        
/************************************************************************/
/*'02'6'24 added
/* -------------------------------------------------------------------- */
Exp87K WORD CALLBACK AnalogInHex_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);